[package]
name = "rustynes-desktop"
version = "0.8.5"
edition = "2024"
rust-version = "1.88"
authors = ["doublegate"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/doublegate/RustyNES"
homepage = "https://github.com/doublegate/RustyNES"
documentation = "https://docs.rs/rustynes-desktop"
keywords = ["nes", "emulator", "desktop", "egui"]
categories = ["emulators", "games"]
description = "Desktop frontend for RustyNES NES emulator using egui + eframe"

[[bin]]
name = "rustynes"
path = "src/main.rs"

[dependencies]
# Core emulation
rustynes-core = { path = "../rustynes-core" }

# Graphics - eframe handles egui + window + rendering
eframe = { version = "0.33", default-features = false, features = ["default_fonts", "glow", "wayland", "x11"] }
egui = "0.33"
egui_extras = { version = "0.33", features = ["image"] }
image = { version = "0.25", default-features = false, features = ["png"] }

# Audio
cpal = "0.16"

# Input
gilrs = "0.11"

# Utilities
anyhow = "1.0"
thiserror = "2.0"
log = "0.4"
env_logger = "0.11"

# Configuration
serde = { version = "1.0", features = ["derive"] }
ron = "0.12"

# Platform paths and file dialogs
directories = "5.0"
rfd = "0.15"

# CLI argument parsing
clap = { version = "4.5", features = ["derive"] }

[dev-dependencies]
tempfile = "3.8"

[features]
default = []

[lints.rust]
unsafe_code = "warn"
missing_docs = "warn"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
cargo = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
cast_possible_truncation = "allow"
cast_sign_loss = "allow"
cast_lossless = "allow"
cast_possible_wrap = "allow"
must_use_candidate = "allow"
cargo_common_metadata = "allow"
